# UR.RTDE

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  BUILD_INSTRUCTIONS.md  BUILD_SUCCESS.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Directory.Build.props  FEATURE_COVERAGE.md  FINAL_STATUS.md  FINAL_TEST_RESULTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PATHS.md  IMPLEMENTATION_REMAINING.md  LICENSE  MISSION_ACCOMPLISHED.md  NATIVE_BUILD_PLAN.md  NATIVE_BUILD_STATUS.md  PHASE1_STATUS.md  PROJECT_STATUS.md  PYTHONNET_ANALYSIS.md  README.md  RELEASE_NOTES.md  RESUME.md  START_HERE.txt  STATUS.md  TEST_PLAN.md  TEST_REPORT.md  UPDATING_URRTDE.md  UR.RTDE.sln  build-complete.bat  build-final.bat  build-full-boost.bat  build-native.bat  build-patched.bat  build-vcpkg.bat  build-vcpkg2.bat  build-with-env.bat  (+6 more)
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build.yml  release.yml
.run/: URSimTests (macOS Debug).run.xml  URSimTests (macOS Debug, launchSettings).run.xml  URSimTests (macOS Debug, quick).run.xml
docker/ursim/: Dockerfile  README.md  docker-compose.external-control.yml  docker-compose.yml
docs/: quickstart.md  troubleshooting.md  version-matrix.md
native/: BUILD.md  build-macos-arm64-static-boost.sh  build-macos-x64-static-boost.sh  sign-macos-runtimes.sh
native/facade/: CMakeLists.txt  build-facade.bat  ur_rtde_c_api.cpp  ur_rtde_c_api.exp  ur_rtde_c_api.exports  ur_rtde_c_api.h
samples/Console/: ConsoleDemo.csproj  Program.cs  PythonBridgeTest.cs  TestHarness.cs
samples/URSimTests/: AdvancedTests.cs  Program.cs  QuickTest.cs  README.md  URSimIntegrationTests.cs  URSimTests.csproj
samples/URSimTests/Properties/: launchSettings.json
scripts/: cleanup-repo.ps1
src/UR.RTDE/: RTDEControl.cs  RTDEException.cs  RTDEIO.cs  RTDEReceive.cs  RobotiqGripper.cs  RobotiqGripperNative.cs  RobotiqGripperRtde.cs  UR.RTDE.csproj  URScriptClient.cs
src/UR.RTDE/Native/: MacOsNativeLibraryBootstrap.cs  NativeMethods.cs
src/UR.RTDE/PythonBridge/: PythonEngineManager.cs  RTDEControlPython.cs  RTDEReceivePython.cs
src/UR.RTDE/runtimes/osx-arm64/native/: libboost_system-mt.dylib  libboost_thread-mt.dylib  librtde.1.6.3.dylib  librtde.1.6.dylib  librtde.dylib  libur_rtde_c_api.dylib
src/UR.RTDE/runtimes/osx-x64/native/: libur_rtde_c_api.dylib
src/UR.RTDE/runtimes/win-x64/native/: ur_rtde_c_api.lib
